# pytortto

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg
examples/: conv2d_result_speed_comparison.ipynb
examples/gan/dcgan/: README.md  dcgan_tortto.ipynb
examples/resnet/preact_resnet101/: README.md  error_history.npy  log.txt  preact_resnet101.ipynb
examples/resnet/preact_resnet18/: README.md  error_history.npy  loss_history.npy  preact_resnet18.ipynb
examples/resnet/resnet50_finetune/: README.md  class_activation_map.ipynb  resnet50_finetune.ipynb
examples/resnet/small_preact_resnet_110/: README.md  error_history.npy  loss_history.npy  small_preact_resnet110.ipynb
examples/transformers/: reverse_prediction.ipynb
examples/transformers/vision_transformer_finetune/: README.md  error_history.npy  log.txt  loss_history.npy  vit_attn_rollout.ipynb  vit_finetune.ipynb
examples/unet/: README.md  UNet.ipynb
examples/unet/logs/: log.txt  loss_history.npy
examples/yolo/: README.md  YOLO-v1.ipynb  good_ref.py  loss.ipynb  loss.py  loss1.py  mAP.ipynb  main_overfit.py  model.py  model_resnetyolo.py  plot.ipynb  resnet50_finetune.ipynb  utils.py  viz.py
examples/yolo/data/: Iobj.npy  boxes.npy  labels.npy  out.npy
examples/yolo/logs/: log.txt
src/: Untitled.ipynb  checkthisout.ipynb  grad_ufunc.py  ufuncgen.py
src/tortto/: VariableFunctions.py  __init__.py  serialization.py  tensor.py  xparray.py
src/tortto/autograd/: __init__.py  function.py  grad_fcn.py  grad_fcn_config.yaml  grad_fcn_generator.py  grad_fcn_misc.py  grad_mode.py  grad_nn.py  grad_ufunc.py  (+3 more)
(+32 files in other folders)
