[metadata]
name = tortto
version = 1.2.5
author = Yu Hou
author_email = yhou0015@student.monash.edu
description = A PyTorch style machine learning framework written in NumPy with GPU acceleration from CuPy.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/samrere/pytortto
project_urls =
    Bug Tracker = https://github.com/samrere/pytortto/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    numpy
[options.packages.find]
where = src
