[metadata]
name = tortto
version = attr: tortto.__version__
author = Yu Hou
author_email = hy1201750@gmail.com
description = A PyTorch style machine learning framework written in NumPy with GPU acceleration from CuPy.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/samrere/pytortto
project_urls =
    Bug Tracker = https://github.com/samrere/pytortto/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence


[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    numpy >=1.24
[options.packages.find]
where = src
